--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,40 @@ requires-python = ">=3.12"
 dependencies = [
     "bh-bump==0.1.3rc1",
 ]
+
+[project.scripts]
+bh-deedoo = "bh_deedoo.__main__:main"
+
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+script-files = [
+]
+
+[tool.setuptools.package-data]
+"*" = ["*.*"]
+
+
+# Mypy
+# ----
+
+[tool.mypy]
+files = "."
+
+# Use strict defaults
+strict = true
+warn_unreachable = true
+warn_no_return = true
+
+[[tool.mypy.overrides]]
+# Don't require test functions to include types
+module = "tests.*"
+allow_untyped_defs = true
+disable_error_code = "attr-defined"
+
+
