--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bh-bump==0.1.3rc1",
-    "bh-util>=0.2.0b0",
+    "pytest>=8.3.4",
     "schedule>=1.2.2",
 ]
 
@@ -44,5 +44,8 @@ warn_no_return = true
 module = "tests.*"
 allow_untyped_defs = true
 disable_error_code = "attr-defined"
+
+[tool.uv.workspace]
+members = ["foobar"]
 
 
